--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
                 <div class="screen-current" id="currentOperationScreen">0</div>
             </div>
             <div class="buttons-grid">
-                <button class="btn btn-red span-2" id="clearBtn" onclick="this.blur();">
+                <button class="btn btn-red span-2" id="clearBtn">
                     CLEAR
                 </button>
-                <button class="btn btn-blue span-2" id="deleteBtn" onclick="this.blur();">
+                <button class="btn btn-blue span-2" id="deleteBtn">
                     DELETE
                 </button>
-                <button class="btn" onclick="this.blur();" data-number>7</button>
-                <button class="btn" onclick="this.blur();" data-number>8</button>
-                <button class="btn" onclick="this.blur();" data-number>9</button>
-                <button class="btn" onclick="this.blur();" data-operator>÷</button>
+                <button class="btn digit" data-key="7">7</button>
+                <button class="btn digit" data-key="8">8</button>
+                <button class="btn digit" data-key="9">9</button>
+                <button class="btn operation">÷</button>
 
-                <button class="btn" onclick="this.blur();" data-number>4</button>
-                <button class="btn" onclick="this.blur();" data-number>5</button>
-                <button class="btn" onclick="this.blur();" data-number>6</button>
-                <button class="btn" onclick="this.blur();" data-operator>×</button>
+                <button class="btn digit" data-key="4">4</button>
+                <button class="btn digit" data-key="5">5</button>
+                <button class="btn digit" data-key="6">6</button>
+                <button class="btn operation">×</button>
 
-                <button class="btn" onclick="this.blur();" data-number>1</button>
-                <button class="btn" onclick="this.blur();" data-number>2</button>
-                <button class="btn" onclick="this.blur();" data-number>3</button>
-                <button class="btn" onclick="this.blur();" data-operator>−</button>
+                <button class="btn digit" data-key="1">1</button>
+                <button class="btn digit" data-key="2">2</button>
+                <button class="btn digit" data-key="3">3</button>
+                <button class="btn operation">−</button>
 
-                <button class="btn" onclick="this.blur();" id="pointBtn">.</button>
-                <button class="btn" onclick="this.blur();" data-number>0</button>
-                <button class="btn" onclick="this.blur();" id="equalsBtn">=</button>
-                <button class="btn" onclick="this.blur();" data-operator>+</button>
+                <button class="btn" id="pointBtn">.</button>
+                <button class="btn digit" data-key="0">0</button>
+                <button class="btn" id="equalsBtn">=</button>
+                <button class="btn operation">+</button>
             </div>
         </div>
     </main>
